force-app/main/default/objects/Pricebook_Priority__mdt/Pricebook_Priority__mdt.object-meta.xml
<CustomObject>
    <label>Pricebook Priority</label>
    <pluralLabel>Pricebook Priorities</pluralLabel>
    <description>Configurable priority rules for price book resolution. Each record defines a combination of dimensions (Customer, Category, Territory, Channel) and its priority order. Lower priority number = higher precedence.</description>
</CustomObject>