force-app/main/default/objects/Pricebook_Priority__mdt/fields/Has_Category__c.field-meta.xml
<CustomField>
    <fullName>Has_Category__c</fullName>
    <label>Has Category</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this priority level requires a Product Category to be specified on the price list entry.</description>
</CustomField>