force-app/main/default/objects/Pricebook_Priority__mdt/fields/Has_Channel__c.field-meta.xml
<CustomField>
    <fullName>Has_Channel__c</fullName>
    <label>Has Channel</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this priority level requires a Channel to be specified on the price list entry.</description>
</CustomField>