force-app/main/default/objects/Pricebook_Priority__mdt/fields/Has_Customer__c.field-meta.xml
<CustomField>
    <fullName>Has_Customer__c</fullName>
    <label>Has Customer</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this priority level requires a Customer (Account) to be specified on the price list entry.</description>
</CustomField>