force-app/main/default/objects/Pricebook_Priority__mdt/fields/Has_Territory__c.field-meta.xml
<CustomField>
    <fullName>Has_Territory__c</fullName>
    <label>Has Territory</label>
    <type>Checkbox</type>
    <defaultValue>false</defaultValue>
    <description>Whether this priority level requires a Territory to be specified on the price list entry.</description>
</CustomField>