force-app/main/default/objects/Pricebook_Priority__mdt/fields/Is_Active__c.field-meta.xml
<CustomField>
    <fullName>Is_Active__c</fullName>
    <label>Is Active</label>
    <type>Checkbox</type>
    <defaultValue>true</defaultValue>
    <description>Whether this priority configuration is active. Inactive priorities are skipped during price resolution.</description>
</CustomField>