force-app/main/default/objects/Pricebook_Priority__mdt/fields/Priority_Order__c.field-meta.xml
<CustomField>
    <fullName>Priority_Order__c</fullName>
    <label>Priority Order</label>
    <type>Number</type>
    <precision>2</precision>
    <scale>0</scale>
    <required>true</required>
    <unique>true</unique>
    <description>Priority order number. 1 = highest priority (checked first). Lower numbers take precedence.</description>
</CustomField>