force-app/main/default/objects/Pricebook_Priority__mdt/listViews/Active_Priorities.listView-meta.xml
<ListView>
    <fullName>Active_Priorities</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Priority_Order__c</columns>
    <columns>Has_Customer__c</columns>
    <columns>Has_Category__c</columns>
    <columns>Has_Territory__c</columns>
    <columns>Has_Channel__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>true</value>
    </filters>
    <label>Active Priorities</label>
</ListView>