force-app/main/default/objects/Pricebook_Priority__mdt/listViews/All_Priorities.listView-meta.xml
<ListView>
    <fullName>All_Priorities</fullName>
    <columns>MasterLabel</columns>
    <columns>DeveloperName</columns>
    <columns>Priority_Order__c</columns>
    <columns>Has_Customer__c</columns>
    <columns>Has_Category__c</columns>
    <columns>Has_Territory__c</columns>
    <columns>Has_Channel__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All Priorities</label>
</ListView>